[gd_scene load_steps=16 format=3 uid="uid://b4rmjajuaqpgh"]

[ext_resource type="FontFile" uid="uid://7ynqbsp4f1vm" path="res://Assets/DOS FONT/ModernDOS8x16.ttf" id="1_0osm5"]
[ext_resource type="Script" path="res://Scripts/Terminal/TerminalMain.gd" id="1_vhgmm"]
[ext_resource type="Shader" path="res://Assets/Shaders/node_3d2.gdshader" id="1_wr2pp"]
[ext_resource type="LabelSettings" uid="uid://3nxgf4y7pume" path="res://Scenes/Terminal/TerminalLabelSettings.tres" id="2_4j7iy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m313f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k5jmj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lndk5"]

[sub_resource type="LabelSettings" id="LabelSettings_876ss"]
font = ExtResource("1_0osm5")
font_size = 80
font_color = Color(0.917647, 0.270588, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qtnob"]
font = ExtResource("1_0osm5")
font_size = 40
font_color = Color(0.917647, 0.270588, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_d6q3w"]
font = ExtResource("1_0osm5")
font_size = 20
font_color = Color(0.917647, 0.270588, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_86amq"]
shader = ExtResource("1_wr2pp")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.5
shader_parameter/scanlines_width = 0.158
shader_parameter/grille_opacity = 0.3
shader_parameter/resolution = Vector2(648, 648)
shader_parameter/pixelate = true
shader_parameter/roll = false
shader_parameter/roll_speed = 5.0
shader_parameter/roll_size = 0.0
shader_parameter/roll_variation = 0.1
shader_parameter/distort_intensity = 0.003
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 4.75e-08
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.5
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[sub_resource type="Environment" id="Environment_8e3lg"]
background_mode = 3
background_canvas_max_layer = 1
glow_enabled = true
glow_normalized = true
glow_intensity = 1.17
glow_strength = 0.94
glow_bloom = 0.62
glow_blend_mode = 1

[sub_resource type="Animation" id="Animation_u8cwy"]
resource_name = "BootUp"
length = 3.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainScreen/Barrier:scale")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.542), Vector2(1, 0.327), Vector2(1, 0.011), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainScreen/VBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainScreen/Barrier:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MainScreen/CommandBar/Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MainScreen/CommandBar/Label2:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 3.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MainScreen/CommandBar/InputBar:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 3.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("MainScreen/CommandBar/InputBar")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(3.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"grab_focus"
}]
}

[sub_resource type="Animation" id="Animation_7ycc7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainScreen/Barrier:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainScreen/VBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainScreen/Barrier:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MainScreen/CommandBar/Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MainScreen/CommandBar/Label2:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MainScreen/CommandBar/InputBar:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r7lct"]
_data = {
"BootUp": SubResource("Animation_u8cwy"),
"RESET": SubResource("Animation_7ycc7")
}

[node name="TerminalMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vhgmm")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="MainScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = -324.0
offset_right = 324.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="MainScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 10.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0470588, 0.0509804, 0.0745098, 1)

[node name="CommandBar" type="VBoxContainer" parent="MainScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -288.0
offset_top = -624.0
offset_right = 276.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="Label" type="Label" parent="MainScreen/CommandBar"]
visible = false
layout_mode = 2
text = "A.R.C. REMOTE ACCESS TERMINAL [VERSION 13.3.7]"
label_settings = ExtResource("2_4j7iy")

[node name="Label2" type="Label" parent="MainScreen/CommandBar"]
visible = false
layout_mode = 2
text = "Â© 2013 CORSAC TEAM. ALL RIGHTS RESERVED

[P]: IMPORTANT! THIS TERMINAL IS FOR DEBUG PURPOSES
ONLY. PLEASE REMOVE IT IN THE FINAL BUILD!"
label_settings = ExtResource("2_4j7iy")

[node name="Label3" type="Label" parent="MainScreen/CommandBar"]
visible = false
layout_mode = 2
text = ">Remote access disk not found. Please insert a valid
disk or contact [NULL] for further assistance."
label_settings = ExtResource("2_4j7iy")

[node name="InputBar" type="LineEdit" parent="MainScreen/CommandBar"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.917647, 0.270588, 0, 1)
theme_override_fonts/font = ExtResource("1_0osm5")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_m313f")
theme_override_styles/focus = SubResource("StyleBoxEmpty_k5jmj")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_lndk5")
caret_blink = true

[node name="VBoxContainer" type="VBoxContainer" parent="MainScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -186.0
offset_right = 229.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="MainScreen/VBoxContainer"]
layout_mode = 2
text = "CORSAC
TEAM"
label_settings = SubResource("LabelSettings_876ss")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="MainScreen/VBoxContainer"]
layout_mode = 2
text = "A.R.C."
label_settings = SubResource("LabelSettings_qtnob")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="MainScreen/VBoxContainer"]
layout_mode = 2
text = "Artificial Rules Controller"
label_settings = SubResource("LabelSettings_d6q3w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="MainScreen/VBoxContainer"]
layout_mode = 2
text = "REMOTE ACCESS TERMINAL"
label_settings = SubResource("LabelSettings_qtnob")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="MainScreen/VBoxContainer"]
layout_mode = 2
text = "version 13.3.7"
label_settings = SubResource("LabelSettings_d6q3w")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Label6" type="Label" parent="MainScreen/VBoxContainer"]
layout_mode = 2
text = "Â© 2013 CORSAC TEAM. ALL RIGHTS RESERVED"
label_settings = SubResource("LabelSettings_d6q3w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Barrier" type="ColorRect" parent="MainScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -197.0
offset_right = 229.0
offset_bottom = 179.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(0, 376)
mouse_filter = 2
color = Color(0.0470588, 0.0509804, 0.0745098, 1)

[node name="PUT ABOVE EVERYTHING" type="ColorRect" parent="MainScreen"]
material = SubResource("ShaderMaterial_86amq")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_8e3lg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "BootUp"
libraries = {
"": SubResource("AnimationLibrary_r7lct")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
